# Lazy

./: CMakeLists.txt  Lazy.h  README.md  example-1.cc  example-2.cc
cmake/: LazyConfig.cmake
examples/: CMakeLists.txt  example-1.cc  example-2.cc  example-3.cc  example-mergesort.cc
include/Lazy/: Lazy.h
